--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>José Carlos Torres Rivera | AI & iOS</title>
     <meta name="description" content="Portfolio de José Carlos Torres Rivera. IA e iOS." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -37,10 +37,11 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Outfit:wght@600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Tokens CSS generados localmente -->
+    <link rel="stylesheet" href="/tokens.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-    <link rel="stylesheet" href="/tokens.css" />
