--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Outfit:wght@600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <!-- Tokens CSS generados localmente -->
-    <link rel="stylesheet" href="/tokens.css" />
+    <!-- Tokens generados desde el spec -->
+    <link rel="stylesheet" href="/spec-tokens.css" />
   </head>
   <body>
     <div id="root"></div>
