actualñizacion de recursoso

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>José Carlos Torres Rivera | AI & iOS</title>
     <meta name="description" content="Portfolio de José Carlos Torres Rivera. IA e iOS." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <meta property="og:title" content="José Carlos Torres Rivera - Portfolio 2025" />
     <meta property="og:description" content="AI Architect & iOS Technical Lead" />
